-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.6, 5.12.4, 5.15.5
-
-
43a63901f4eb61ad8a29f4cc7a1700685f88ec35 (qt/qtbase/dev) 432acc2794be4bb3fa98c7319b7824bf2fec44d4 (qt/qtbase/6.2) 6a2b565b5bed2616a4f5b7a14931e09594f4670b (qt/qtbase/6.1) 41fabc9b2729f401a4a2953870d5f4753ad064f0 (qt/tqtc-qtbase/5.15)
Symptom
Garbled character is displayed when switching Arabic to another language. I attached sample program (source code) that reproduces the problem.Garbled character is displayed when switching Arabic to another language. I attached sample program (source code : ArabicFontChangeSample.zip) that reproduces the problem.
Steps to Reproduce
- Launch the sample program
- Click a button labeled "Arabic"
- Click a button labeled "Japanese"
- Garbled characters are displayed
Notes
- This symptom happens when selecting Arabic first then switch to another language. If Japanese or English is selected first, this symptom never happens.
- This symptom only happens when “NoFontMerging” is specified as QFont::StyleStrategy option. "NoFontMerging" is specified in main.cpp.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-81770 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
365611,2 | Fix bug with NoFontMerging when font does not support script | dev | qt/qtbase | Status: MERGED | +2 | 0 |
365846,2 | Fix bug with NoFontMerging when font does not support script | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
365927,2 | Fix bug with NoFontMerging when font does not support script | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
365931,3 | Fix bug with NoFontMerging when font does not support script | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |