src/gui/text/qfontdatabase_p.h
@@ -266,7 +266,9 @@ public:
     static void createDatabase();
     static void parseFontName(const QString &name, QString &foundry, QString &family);
     static QString resolveFontFamilyAlias(const QString &family);
-    static QFontEngine *findFont(const QFontDef &request, int script /* QChar::Script */);
+    static QFontEngine *findFont(const QFontDef &request,
+                                 int script /* QChar::Script */,
+                                 bool preferScriptOverFamily = false);
     static void load(const QFontPrivate *d, int script /* QChar::Script */);
     static QFontDatabasePrivate *ensureFontDatabase();
 
